a baixaria de unir as paginas

--- a/css/formstyle.css
+++ b/css/formstyle.css
@@ -53,7 +53,7 @@ td#midias {
     font-weight: bold;
 }
 
-div {
+#escrita {
     background-color: rgb(187, 187, 187);
     width:350px;
     height:auto;
