--- a/src/css/style.css
+++ b/src/css/style.css
@@ -50,6 +50,13 @@ ul{
     background-color: coral;
 }
 
+.conteudo-principal .painel .titulo1{
+    color: #a70000;
+    text-transform: uppercase;
+    font-size: calc(1em + 1vw);
+    opacity: 80%;
+}
+
 img{
     max-width: 100%;
     opacity: 0.6;
